Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36524

qdbus: munmap_chunk(): invalid pointer

XMLWordPrintable

      Running qdbus with any arguments results in SIGSEGV or SIGABRT.

      qdbus org.freedesktop.DBus /:

      Program received signal SIGSEGV, Segmentation fault.
      
      #0  __memcpy_ssse3 () at ../sysdeps/i386/i686/multiarch/memcpy-ssse3.S:2578
      #1  0x08062258 in ?? ()
      Backtrace stopped: previous frame inner to this frame (corrupt stack?)
      

      qdbus org.freedesktop.secrets /org/freedesktop/secrets/collection/login:

      *** Error in `/usr/lib/i386-linux-gnu/qt5/bin/qdbus': munmap_chunk(): invalid pointer: 0x08084cd0 ***
      Program received signal SIGABRT, Aborted.
      
      #0  0xb7fde424 in __kernel_vsyscall ()
      #1  0xb77e981f in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
      #2  0xb77eccd3 in __GI_abort () at abort.c:90
      #3  0xb7826275 in __libc_message (do_abort=do_abort@entry=2, fmt=fmt@entry=0xb79267d0 "*** Error in `%s': %s: 0x%s ***\n")
          at ../sysdeps/unix/sysv/linux/libc_fatal.c:199
      #4  0xb7830e52 in malloc_printerr (action=<optimized out>, str=<optimized out>, ptr=0x8084cd0) at malloc.c:4923
      #5  0xb7831505 in munmap_chunk (p=<optimized out>) at malloc.c:2785
      #6  munmap_chunk (p=<optimized out>) at malloc.c:2770
      #7  0xb7acf645 in QArrayData::deallocate (data=0x8084cd0, objectSize=objectSize@entry=1, alignment=alignment@entry=4) at tools/qarraydata.cpp:125
      #8  0xb7cb4058 in deallocate (data=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qarraydata.h:230
      #9  ~QByteArray (this=0xbffff1dc, __in_chrg=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qbytearray.h:409
      #10 parameterTypes (this=<optimized out>) at kernel/qmetaobject.cpp:1688
      #11 signature (this=<optimized out>) at kernel/qmetaobject.cpp:1608
      #12 QMetaMethod::methodSignature (this=this@entry=0xbffff2dc) at kernel/qmetaobject.cpp:1728
      #13 0x0804cfe3 in listInterface (interface=..., path=..., service=...) at qdbus.cpp:191
      #14 listAllInterfaces (path=..., service=...) at qdbus.cpp:239
      #15 main (argc=3, argv=0xbffff3b4) at qdbus.cpp:515
      

      This happens for me (with Qt 5.2 on i386) and for a fellow Debian Maintainer (with Qt 5.1 on amd64) whom I asked to try this.

        For Gerrit Dashboard: QTBUG-36524
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            mandriver Dmitry Shachnev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes